--- a/tests/dash/templates/dash_acl_group.j2
+++ b/tests/dash/templates/dash_acl_group.j2
@@ -2,7 +2,7 @@
     {
         "DASH_ACL_GROUP_TABLE:{{ acl_group }}": {
             "ip_version": "{{ip_version}}",
-            "guid": "{{ acl_group }}_guid"
+            "guid": "a55b99cc-b5b4-4699-a6b2-35fe7c272132"
         },
         "OP": "{{op}}"
     }
