--- a/tests/acl/templates/acltb_test_rules_part_1.j2
+++ b/tests/acl/templates/acltb_test_rules_part_1.j2
@@ -125,6 +125,36 @@
                                         "destination-port": "179"
                                     }
                                 }
+                            },
+                            "29": {
+                                "actions": {
+                                    "config": {
+                                        "forwarding-action": "ACCEPT"
+                                    }
+                                },
+                                "config": {
+                                    "sequence-id": 29
+                                },
+                                "ip": {
+                                    "config": {
+                                        "destination-ip-address": "{{Loopback2}}/32"
+                                    }
+                                }
+                            },
+                            "30": {
+                                "actions": {
+                                    "config": {
+                                        "forwarding-action": "ACCEPT"
+                                    }
+                                },
+                                "config": {
+                                    "sequence-id": 30
+                                },
+                                "ip": {
+                                    "config": {
+                                        "destination-ip-address": "{{Loopback3}}/32"
+                                    }
+                                }
                             }
                         }
                     }
